update: updated to work for mobile

--- a/Todo
+++ b/Todo
@@ -4,6 +4,24 @@ Find background images?
 Create extra web pages based upon example sites - 2 hours
 Create menu - 1 hour
 
+
+How to mobile phone:
+1. Fix the Header screen. 
+Picture should go on top of the text.
+Text should be smaller.
+Arrow is fine.
+
+
+2. Projects window:
+The padding on the one side is nice, 
+although the width of the entire thing needs to be bigger
+On mobile, they need to be equal widths
+
+3. Tech Stack:
+ - Need to one line the heading
+Need to make sure that the headings border also extends around the tech stack area
+
+
 Done:
 //Finish writing descriptions of projects - 1 hour//
 //Collect pictures for projects - 1 hour//
